testsuite/poke.pkl/in-diag-1.pk
/* { dg-do compile } */

defvar foo = 10 in 20; /* { dg-error "wrong type.*expected array" } */
